# core-automation

./: .gitignore  core.py  pyproject.toml
core_automation/: __init__.py
core_automation/run_local/: __init__.py  run_local.py
core_automation/run_remote/: __init__.py  run_remote.py
core_automation/util/: __init__.py  util.py
