[tool.poetry]
name = "core-automation"
version = "0.0.0"
description = "Core Automation Application"
authors = ["James Barwick <james.barwick@singtel.com>"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.104"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
core = 'core_automation:main'

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"